--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,4 @@
-base    = "src"
-publish = ".output/public"
-command = "npm run build"
+[build]
+  base    = "src"
+  publish = ".output/public"
+  command = "npm run build"
